x overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ padding: 0;
 margin: 0;
 /*font-family: 'Nanum Gothic', sans-serif;*/
 font-family: 'Avro', sans-serif;
+overflow-x:hidden;
 
 }
 .main-dark{
